# ArbBot

./: .env.example  .gitignore  README.md  VPS_SETUP_AND_AUTO_DEPLOY_COMMANDS.md  dashboard.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-vps.yml
scripts/: arbbot-deploy.sh
src/interexchange_arbitrage/: __init__.py  alerts.py  cli.py  csv_cycle.py  engine.py  models.py  paper_trading.py  persistence.py  scanner.py  settings.py
src/interexchange_arbitrage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/interexchange_arbitrage/dashboard/: __init__.py  app.py
src/interexchange_arbitrage/dashboard/static/: style.css
src/interexchange_arbitrage/dashboard/templates/: index.html  login.html
src/interexchange_arbitrage/exchanges/: __init__.py  base.py  binance.py  bybit.py  kucoin.py  okx.py
tests/: test_csv_cycle.py  test_engine.py  test_paper_trading.py
