[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interexchange-arbitrage"
version = "0.1.0"
description = "Week 1 foundation for inter-exchange spot arbitrage scanner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "rich==13.7.1",
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "jinja2==3.1.4",
  "python-multipart==0.0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
